// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`findOptionsToQueryState should add criteria as predicate 1`] = `
{
  "cteFrom": null,
  "ctes": [],
  "distinct": false,
  "filterOverrides": {},
  "groupBy": null,
  "having": [],
  "includes": [],
  "lock": null,
  "orderBy": null,
  "predicates": [
    {
      "conjunction": "and",
      "predicate": {
        "name": "Alice",
      },
    },
  ],
  "rawHaving": [],
  "rawSelections": [],
  "rawWhere": [],
  "resolvedFilters": [],
  "selections": null,
  "setOperations": [],
  "skip": null,
  "subqueryPredicates": [],
  "take": null,
  "versionTimestamp": null,
  "windows": [],
  "withAllVersions": false,
  "withDeleted": false,
  "withoutScope": false,
}
`;

exports[`findOptionsToQueryState should convert empty criteria and options 1`] = `
{
  "cteFrom": null,
  "ctes": [],
  "distinct": false,
  "filterOverrides": {},
  "groupBy": null,
  "having": [],
  "includes": [],
  "lock": null,
  "orderBy": null,
  "predicates": [],
  "rawHaving": [],
  "rawSelections": [],
  "rawWhere": [],
  "resolvedFilters": [],
  "selections": null,
  "setOperations": [],
  "skip": null,
  "subqueryPredicates": [],
  "take": null,
  "versionTimestamp": null,
  "windows": [],
  "withAllVersions": false,
  "withDeleted": false,
  "withoutScope": false,
}
`;

exports[`findOptionsToQueryState should map limit and offset 1`] = `
{
  "cteFrom": null,
  "ctes": [],
  "distinct": false,
  "filterOverrides": {},
  "groupBy": null,
  "having": [],
  "includes": [],
  "lock": null,
  "orderBy": null,
  "predicates": [],
  "rawHaving": [],
  "rawSelections": [],
  "rawWhere": [],
  "resolvedFilters": [],
  "selections": null,
  "setOperations": [],
  "skip": 20,
  "subqueryPredicates": [],
  "take": 10,
  "versionTimestamp": null,
  "windows": [],
  "withAllVersions": false,
  "withDeleted": false,
  "withoutScope": false,
}
`;

exports[`findOptionsToQueryState should map relations to include specs 1`] = `
[
  {
    "relation": "author",
    "required": false,
    "select": null,
    "strategy": "join",
    "where": null,
  },
  {
    "relation": "tags",
    "required": false,
    "select": null,
    "strategy": "join",
    "where": null,
  },
]
`;
